<resources>
    <string name="app_name">KnowingMbtiFlower</string>
    <string name="test_1_Q">꽃 구경을 한 번 가볼까,\n누구랑 보러 가지?</string>
    <string name="test_1_A1">친구 or 애인 or 가족!\n꽃은 여럿이 봐야 더 좋지.</string>
    <string name="test_1_A2">혼자 여유롭게 구경하는 게 좋아.</string>
    <string name="test_2_Q">꽃 구경하러 나왔는데\n사람들이 엄청 많다.</string>
    <string name="test_2_A1">와, 여기 진짜 유명한 곳인가 봐.\n오길 잘했다.</string>
    <string name="test_2_A2">조금 기 빨려…… </string>
    <string name="test_3_Q">길에서 모르는 사람이 프러포즈를 준비한다고 나보고 상대에게 꽃 한 송이를 전달해달래. 해준다 만다?</string>
    <string name="test_3_A1">뭔가 재밌을 거 같아.\n어려운 부탁도 아니고 해주지 뭐. </string>
    <string name="test_3_A2">모르는 사람이잖아...\n그리고 좀 부끄러워 </string>
    <string name="test_4_Q">애인의 서프라이즈 꽃 선물!\n이 때 드는 생각은?</string>
    <string name="test_4_A1">로맨틱해, 꽃 선물 좋아! </string>
    <string name="test_4_A2">고맙지, 근데 다른 선물이 더 좋긴 해. </string>
    <string name="test_5_Q">해바라기 하면 먼저 떠오르는 이미지는?</string>
    <string name="test_5_A1">노랗고 가운데는 갈색인 꽃</string>
    <string name="test_5_A2">한 사람만 바라보는 순정파</string>
    <string name="test_6_Q">선물 받은 꽃 어떻게\n보관하지?</string>
    <string name="test_6_A1">일단 화분에 넣어놨다가,\n시들면.. 어쩔 수 없지</string>
    <string name="test_6_A2">잘 말려서 오랫동안 보관해야지.</string>
    <string name="test_7_Q">집에서 키우던 식물이\n시들어 버렸다.\n이 때 드는 생각은?</string>
    <string name="test_7_A1">내가 물을 너무 많이 줬나?\n햇빛을 못 봤나? </string>
    <string name="test_7_A2">내가 좀 더 잘 챙겼어야 했는데\n미안하고 속상해.</string>
    <string name="test_8_Q">친구가 갑자기 같이 꽃꽂이\n배우러 가자고 한다.\n근데 난 관심 없는데 어떻게 하지?</string>
    <string name="test_8_A1">미안, 난 꽃꽂이에는 관심 없어서.</string>
    <string name="test_8_A2">음... 언제…? (일단 물어는 볼래)</string>
    <string name="test_9_Q">꽃을 고를 때 더 중요하게\n생각하는 것은?</string>
    <string name="test_9_A1">이 꽃 예쁘다! 예쁜 꽃이 최고지.</string>
    <string name="test_9_A2">이 꽃은 꽃말이 뭐지? 의미가 중요해.</string>
    <string name="test_10_Q">오늘은 동생의 졸업식!\n꽃을 사줘야겠지?</string>
    <string name="test_10_A1">무슨 꽃을 살까?\n꽃 먼저 고르고 사러 가야지.</string>
    <string name="test_10_A2">일단 꽃집에 가서 보고 골라야지.</string>
    <string name="test_11_Q">화분에 물을 주는 방식은?</string>
    <string name="test_11_A1">물 주는 때를 정해서\n딱 맞춰서 줘야지.</string>
    <string name="test_11_A2">그냥 생각날 때, 흙이 마른 것 같을 때</string>
    <string name="test_12_Q">벚꽃 명소라고 해서 놀러왔는데\n아직 벚꽃이 다 안 피었는데..?</string>
    <string name="test_12_A1">여기까지 왔는데\n너무 당황스럽고 짜증나...</string>
    <string name="test_12_A2">좀 아쉽긴 한데 이 정도도 괜찮지.\n 뭐 벚꽃 봤으면 됐어.</string>

</resources>