<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".test2">

    <TextView
        android:id="@+id/qaTextview2"
        android:layout_width="274dp"
        android:layout_height="71dp"
        android:layout_marginTop="93dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/test_2_Q"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/test2btn"
        android:layout_width="275dp"
        android:layout_height="55dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="64dp"
        android:text="@string/test_2_A1"
        app:backgroundTint="#DAA2A2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qaTextview2"
        tools:textSize="12sp" />

    <Button
        android:id="@+id/test2btn2"
        android:layout_width="279dp"
        android:layout_height="58dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="61dp"
        android:text="@string/test_2_A2"
        app:backgroundTint="#DAA2A2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/test2btn" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="44dp"
        android:clickable="true"
        android:tint="#FFFFFF"
        app:backgroundTint="#DAA2A2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginBottom="64dp"
        android:text="뒤로가기를 원하시면 눌러주세요."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>